fix: fix scroll on mobile devices

--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -38,7 +38,7 @@ body {
 .drawer-container {
   position: fixed;
   z-index: 88;
-  /*overflow: auto;*/
+  overflow: auto;
 }
 
 @keyframes appear {
